--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Nihilism.biz</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Meaning through commerce!</h2>
     </section>
 
     <section class="main-content">
